# nexus

./: .gitmodules  CMakeLists.txt
.github/workflows/: build-wheels.yml
include/nexus/: buffer.h  command.h  device.h  object.h  runtime.h  system.h
include/nexus-api/: _nxs_functions.h  _nxs_propertys.h  nxs.h
plugins/: CMakeLists.txt
plugins/cpu/: cpu_command.cpp  cpu_runtime.cpp  cpu_runtime.h  cpu_schedule.cpp  cpu_schedule.h  threadpool.h  uarch_to_string.h
plugins/cuda/: CMakeLists.txt  cuda_buffer.h  cuda_command.h  cuda_device.h  cuda_library.h  cuda_plugin_runtime.h  cuda_runtime.cpp  cuda_schedule.cpp  cuda_schedule.h
plugins/hip/: hip_runtime.cpp
plugins/include/: rt_buffer.h  rt_command.h  rt_device.h  rt_object.h  rt_runtime.h  rt_schedule.h  rt_utilities.h  runtime_buffer.h  runtime_command.h  runtime_device.h  runtime_kernel.h  runtime_library.h  runtime_schedule.h
plugins/metal/: metal_runtime.cpp
plugins/tenstorrent/: CMakeLists.txt  README.md  tenstorrent.h  tt_buffer.cpp  tt_buffer.h  tt_command.cpp  tt_command.h  tt_device.h  tt_library.cpp  tt_library.h  tt_runtime.cpp  tt_runtime.h  tt_schedule.cpp  tt_schedule.h
python/nexus/: __init__.py  utils.py
python/src/: system.cc
schema/: library_catalog.json
scripts/: build.sh  test_build.sh
src/: _buffer_impl.h  _device_impl.h  _kernel_impl.h  _library_impl.h  _properties_impl.h  _system_impl.h  buffer.cpp  command.cpp  device.cpp  kernel.cpp  library.cpp  properties.cpp  runtime.cpp  schedule.cpp  system.cpp
test/: CMakeLists.txt
test/cpp/: test_basic_kernel.cpp  test_buffers.cpp
test/cpp/gpu/: CMakeLists.txt  test_basic_kernel.cpp  test_linux.cpp  test_multi_stream_sync.cpp
test/kernels/: CMakeLists.txt
test/kernels/cpu/: cpu_kernel.c
test/kernels/cuda_kernels/: add_vectors_shmem.cu
test/packaging/: build.sh  test.sh  test_build.sh
test/pynexus/: test-linux-cuda.py  test.py  test_load_library_missing.py
test/unit/: hello_world.cpp
tools/: cudakc.py
